--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
     <title>CRUD</title>
   </head>
   <body>
+    <h1>Test CI/CD</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <nav class="navbar navbar-dark"></nav>
