--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,10 @@
     <title>CRUD</title>
   </head>
   <body>
-    <h1>Test CI/CD</h1>
+    
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
+        <h1>Test de presentacion</h1>
         <nav class="navbar navbar-dark"></nav>
         <button
           class="navbar-toggler"
